--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "next": "10.0.4",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
+    "node-gyp": "^9.0.0",
     "polished": "^4.0.5",
     "prettier": "^2.2.1",
     "rc-drawer": "^4.1.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "17.0.1",
     "react-ga": "^3.3.0",
     "react-icons": "^4.1.0",
+    "react-intl": "^5.24.8",
     "react-modal-video": "1.2.6",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
